# PirateWallet-Lite

./: .gitignore  .travis.yml  README.md  application.qrc  piratewallet-lite-mingw.pro  piratewallet-lite.pro  zerwallet-lite.pro
depends/: Makefile  funcs.mk
lib/: Cargo.toml
res/: Info.plist  SIGNATURES_README  appdmg.json  arrr_qt_wallet_de.qm  arrr_qt_wallet_es.qm  arrr_qt_wallet_fi.qm  arrr_qt_wallet_fi.ts  arrr_qt_wallet_fr.qm  arrr_qt_wallet_it.qm  arrr_qt_wallet_pt.qm  arrr_qt_wallet_tr.qm  arrr_qt_wallet_zh.qm  resize.sh  zer_qt_wallet_de.qm  zer_qt_wallet_de.ts  zer_qt_wallet_es.qm  zer_qt_wallet_es.ts  zer_qt_wallet_fr.qm  zer_qt_wallet_fr.ts  zer_qt_wallet_it.qm  zer_qt_wallet_it.ts  zer_qt_wallet_pt.qm  zer_qt_wallet_pt.ts  zer_qt_wallet_template.ts  zer_qt_wallet_tr.qm  zer_qt_wallet_tr.ts  zer_qt_wallet_zh.qm  zer_qt_wallet_zh.ts  zerwallet-lite.xpm
res/libzecwalletlite/: Cargo.toml  Makefile  build-win.sh  build.sh  buildopenssl-win.sh  buildopenssl.sh  piratewalletlitelib.h  zecwalletlitelib.h
res/libzecwalletlite/src/: lib.rs
singleapplication/: singleapplication.pri
src/: about.ui  addressbook.cpp  balancestablemodel.cpp  confirm.ui  connection.cpp  connection.h  connection.ui  controller.cpp  controller.h  createzcashconfdialog.ui  datamodel.h  firsttimewizard.cpp  liteinterface.cpp  liteinterface.h  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobileappconnector.ui  precompiled.h  recurring.cpp  recurringmultiple.ui  requestdialog.cpp  requestdialog.ui  sendtab.cpp  settings.cpp  settings.h  settings.ui  txtablemodel.cpp  version.h  viewalladdresses.cpp  viewalladdresses.h  websockets.cpp
utils/: build-deb-arm.sh  build-deb.sh  build-mac-arm.sh  build-mac.sh  build-win.sh  build.sh  buildmxe.sh  dotranslations-win.sh
(+33 files in other folders)
