[package]
name = "qtlib"
version = "0.2.0"
authors = ["MrLynch", "Forge"]
edition = "2018"

[lib]
name = "piratewalletlite"
crate-type = ["staticlib"]

[dependencies]
lazy_static = "1.4.0"
piratewalletlitelib = { git="https://github.com/piratenetwork/piratewallet-light-cli", rev="9cc504db0f77406b13ad55c1df3b3cb4cb00cb36", default-features = false, features = ["embed_params"] }

#test local changes
#piratewalletlitelib = { path = '../../../piratewallet-light-cli/lib' ,  default-features = false, features = ["embed_params"]}
