[package]
name = "qtlib"
version = "0.2.0"
authors = ["MrLynch", "Forge"]
edition = "2018"

[lib]
name = "piratewalletlite"
crate-type = ["staticlib"]

[dependencies]
lazy_static = "1.4.0"
piratewalletlitelib = { git="https://github.com/piratenetwork/piratewallet-light-cli", rev="215bbcd126a1d1173228d554d096190d94bcbd28", default-features = false, features = ["embed_params"] }

#test local changes
#piratewalletlitelib = { path = '../../../piratewallet-light-cli/lib' ,  default-features = false, features = ["embed_params"]}
